feat: added inactive filter to products
